# trading-bot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/trading_bot/: main.py
src/trading_bot/bot/: __init__.py  app.py  sync_service.py
src/trading_bot/config/: __init__.py  config.yaml  settings.py
src/trading_bot/config/strategies/: btc_spot.yaml  btcusdt_spot_60_trend_following.yaml
src/trading_bot/exchange/: __init__.py  interfaces.py
src/trading_bot/exchange/rest/: __init__.py  client.py  extractors.py  quantize.py
src/trading_bot/exchange/ws/: __init__.py  client.py  handlers.py
src/trading_bot/models/: __init__.py  account.py  analysis.py  market.py  orders.py  polars_schemas.py  position.py  signals.py
src/trading_bot/storage/: __init__.py  repos.py  state.py
src/trading_bot/strategy/: __init__.py  base.py  engine.py  interfaces.py  models.py  order_manager.py  registry.py  risk.py
src/trading_bot/strategy/indicators/: __init__.py  engine.py  pl_indicators.py  registry.py
src/trading_bot/strategy/logic/: trend_following.py
src/trading_bot/tg/: __init__.py  client.py
src/trading_bot/utils/: __init__.py  crypto.py  logging.py  time.py
tests/: test_quantize.py
